# Serhii-Talmazan-KI20

./: README.md
lab08/: README.md
lab08/Report/: Лаб. Робота по БМТП №8.doc
lab08/TestSuite/: TS-BMTP-lab_8_1-Talmazan.docx  TS-BMTP-lab_8_2-Talmazan.docx
lab08/prj/ModulesTalmazan/: ModulesTalmazan.depend  ModulesTalmazan.h  ModulesTalmazan.layout  main.cpp
lab08/prj/Talmazan_task/: Talmazan_task.cbp  Talmazan_task.depend  Talmazan_task.layout  main.cpp
lab08/prj/TestDriver/: TestDriver.cbp  TestDriver.depend  main.cpp
lab09/: README.md
lab09/Report/: Лаб. Робота по БМТП №9.doc
lab09/TestSuit/: TS-BMTP-lab_9_1-Talmazan.docx  TS-BMTP-lab_9_2-Talmazan.docx  TS-BMTP-lab_9_3-Talmazan.docx  TS-BMTP-lab_9_4-Talmazan.docx
lab09/prj/ModulesTalmazan/: ModulesTalmazan.cbp  ModulesTalmazan.depend  ModulesTalmazan.h  ModulesTalmazan.layout  main.cpp
lab09/prj/Talmazan_task/: Talmazan_task.cbp  Talmazan_task.depend  Talmazan_task.layout  main.cpp
lab09/prj/TestDriver/: TestDriver.depend  TestDriver.layout  main.cpp
lab10/: README.md
lab10/Report/: Лаб. Робота по БМТП №10.doc
lab10/Software/: input_1.txt  input_2.txt  input_3.txt  input_4.txt  input_5.txt  input_6.txt  output_1.txt  output_2.txt  output_5.txt  output_6.txt
lab10/prj/Talmazan_task/: CMakeLists.txt  main.cpp  modulestalmazan.h
lab11/: README.md
lab11/Report/: Лаб. Робота по БМТП №11.doc
lab11/TestSuite/: MalamuzhTalmazanKot_task_testsuite.docx
lab11/prj/build-lab11-Desktop_Qt_6_0_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  result.txt
